--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,4 +5,8 @@
 @import "base/base";
 @import "base/typography";
 
+@import "components/header";
+@import "components/hero";
+@import "components/navigation";
+
 @import "pages/home";
