Made the about section

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,6 +1,8 @@
 * {
     font-family: MyriadPro-Regular, 'Myriad Pro Regular', MyriadPro, 'Myriad Pro', Helvetica, Arial, sans-serif;
     font-size: 1.6rem;
+    font-weight: 300;
+    color: $color-text-dark;
 }
 
 h1 {
