--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -5,6 +5,7 @@
     background-position: center center;
 
     height: 80rem;
+    box-sizing: border-box;
 
     &__nav {
         width: 95vw;
@@ -12,6 +13,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
         padding-top: 4rem;
     }
 
@@ -20,6 +22,14 @@
 
         img {
             width: 100%;
+        }
+    }
+}
+
+@media (max-width: 593px) {
+    .header {
+        &__nav {
+            justify-content: center;
         }
     }
 }
