--- a/assets/scss/layout/_navigation.scss
+++ b/assets/scss/layout/_navigation.scss
@@ -8,6 +8,7 @@
 
         &-item {
             list-style: none;
+            white-space: nowrap;
 
             a {
                 margin-top: .3rem;
