--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,8 +5,9 @@
 @import "base/base";
 @import "base/typography";
 
-@import "components/header";
-@import "components/hero";
-@import "components/navigation";
+@import "layout/about";
+@import "layout/header";
+@import "layout/hero";
+@import "layout/navigation";
 
 @import "pages/home";
