Made the about chef section

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $color-green: #18C965;
 
 $color-text-dark: #404040;
 $color-text-light: #f9f7f6;
+$color-text-grey: rgb(182, 182, 182);
 
 $color-bg: #f9f7f6;
 
