--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,7 @@
 @import "base/base";
 @import "base/typography";
 
+@import "layout/about-chef";
 @import "layout/about";
 @import "layout/header";
 @import "layout/hero";
