Changed button hover and styled news letter

--- a/assets/scss/layout/_hero.scss
+++ b/assets/scss/layout/_hero.scss
@@ -17,15 +17,19 @@
             padding: 1.5rem 3rem;
 
             &:link, &:visited {
-                background: linear-gradient(to right, $color-green-dark 50%, $color-green 50%);
-                background-size: 200% 200%;
-                background-position: right bottom;
+                background-color: $color-green;
                 text-decoration: none;
-                transition: all .3s;
+                transition: all .2s;
             }
 
-            &:hover, &:active {
-                background-position: left bottom;
+            &:hover {
+                box-shadow: 5px 10px 20px rgba(0, 0, 0, .5);
+                transform: scale(1.05);
+            }
+
+            &:active {
+                box-shadow: none;
+                transform: scale(.95);
             }
         }
     }
