--- a/assets/scss/layout/_news.scss
+++ b/assets/scss/layout/_news.scss
@@ -24,25 +24,26 @@
         }
     }
 
-    &__1, &__2, &__3, &__4 {
+    &__1, &__2, &__3, &__4, &__5 {
         grid-row: 1 / 3;
         background-color: white;
 
         img {
             width: 100%;
-            height: 35rem;
+            height: 74%;
             object-fit: cover;
         }
     }
 
     &__5 {
-        background-color: white;
+        // background-color: white;
 
-        img {
-            width: 100%;
-            height: 25rem;
-            object-fit: cover;
-        }
+        // img {
+        //     width: 100%;
+        //     height: 26rem;
+        //     object-fit: cover;
+        // }
+        grid-row: 1 / 2;
     }
 
     &__subscribe {
@@ -58,13 +59,35 @@
             text-align: center;
             font-size: 1.4rem;
             color: $color-text-light;
+            margin-top: 2rem;
+            margin-bottom: 1rem;
         }
 
         &__name, &__email {
             width: 100%;
             box-sizing: border-box;
-            margin: 1rem 0;
+            margin: 1.5rem 0;
             padding: 1rem;
+        }
+
+        &__button {
+            display: inline-block;
+            padding: 1.5rem 3rem;
+            background-color: $color-green;
+            border: none;
+            transition: all .2s;
+            margin-top: 1.5rem;
+            cursor: pointer;
+
+            &:hover {
+                box-shadow: 5px 10px 20px rgba(0, 0, 0, .5);
+                transform: scale(1.05);
+            }
+
+            &:active {
+                box-shadow: none;
+                transform: scale(.95);
+            }
         }
     }
 }
