Changed button hover effect a bit

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,8 @@
 @import "base/base";
 @import "base/typography";
 
+@import "components/button";
+
 @import "layout/about-chef";
 @import "layout/about";
 @import "layout/header";
