--- a/assets/scss/layout/_about.scss
+++ b/assets/scss/layout/_about.scss
@@ -42,8 +42,8 @@
             &:link, &:visited {
                 text-decoration: none;
                 border-bottom: 1px solid $color-green-dark;
-                padding-bottom: .5rem;
-                padding-top: .5rem;
+                padding: .5rem .8rem;
+                padding-top: .6rem;
                 transition: all .2s;
             }
 
@@ -80,8 +80,8 @@
             &:link, &:visited {
                 text-decoration: none;
                 border-bottom: 1px solid $color-green-dark;
-                padding-bottom: .5rem;
-                padding-top: .5rem;
+                padding: .5rem .8rem;
+                padding-top: .6rem;
                 transition: all .2s;
             }
 
@@ -118,8 +118,8 @@
             &:link, &:visited {
                 text-decoration: none;
                 border-bottom: 1px solid $color-green-dark;
-                padding-bottom: .5rem;
-                padding-top: .5rem;
+                padding: .5rem .8rem;
+                padding-top: .6rem;
                 transition: all .2s;
             }
 
