--- a/assets/scss/layout/_news.scss
+++ b/assets/scss/layout/_news.scss
@@ -22,6 +22,12 @@
                 margin-top: 1rem;
             }
         }
+
+        div:not(:nth-child(6)) {
+            h3 {
+                color: $color-green-dark;
+            }
+        }
     }
 
     &__1, &__2, &__3, &__4, &__5 {
@@ -180,6 +186,22 @@
         &__subscribe {
             grid-column: 2 / 3;
             grid-row: 3 / 4;
+
+            p {
+                margin-top: .8rem;
+                margin-bottom: .8rem;
+            }
+
+            &__name, &__email {
+                width: 100%;
+                box-sizing: border-box;
+                margin: .8rem 0;
+                padding: 1rem;
+            }
+    
+            &__button {
+                margin-top: .8rem;
+            }
         }
 
         &__social {
@@ -191,6 +213,10 @@
 
 @media (max-width: 675px) {
     .news {
+        h3 {
+            font-size: 2rem;
+        }
+
         &__boxes {
             grid-template-columns: 1fr;
             grid-template-rows: repeat(8, 25rem);
