Finished news and contact section

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,6 +9,7 @@
 
 @import "layout/about-chef";
 @import "layout/about";
+@import "layout/contact";
 @import "layout/header";
 @import "layout/hero";
 @import "layout/navigation";
