--- a/assets/scss/layout/_news.scss
+++ b/assets/scss/layout/_news.scss
@@ -1,5 +1,4 @@
 .news {
-    margin: 0 1rem;
     padding: 6rem 1rem;
     background-color: $color-bg;
 
@@ -16,11 +15,6 @@
 
         div {
             border: .3px solid rgba(0, 0, 0, .2);
-
-            h3 {
-                margin: 0 2rem;
-                margin-top: 1rem;
-            }
         }
 
         div:not(:nth-child(6)) {
@@ -34,6 +28,11 @@
         grid-row: 1 / 3;
         background-color: white;
 
+        h3 {
+            margin: 0 2rem;
+            margin-top: 1rem;
+        }
+
         img {
             width: 100%;
             height: 74%;
@@ -42,13 +41,6 @@
     }
 
     &__5 {
-        // background-color: white;
-
-        // img {
-        //     width: 100%;
-        //     height: 26rem;
-        //     object-fit: cover;
-        // }
         grid-row: 1 / 2;
     }
 
@@ -56,13 +48,11 @@
         background-color: $color-green-dark;
         padding: 2rem;
 
-        h3 {
-            text-align: center;
+        &__title {
             color: $color-text-light;
         }
 
-        p {
-            text-align: center;
+        &__text {
             font-size: 1.4rem;
             color: $color-text-light;
             margin-top: 2rem;
@@ -117,6 +107,15 @@
             grid-row: 2 / 3;
             grid-column: 1 / 2;
         }
+
+        &__social {
+            display: flex;
+            justify-content: center;
+            
+            img {
+                margin: 1rem;
+            }
+        }
     }
 }
 
@@ -124,12 +123,17 @@
     .news {
         &__boxes {
             grid-template-columns: repeat(3, minmax(28rem, 1fr));
-            grid-template-rows: repeat(3, 40rem);
+            // grid-template-rows: repeat(3, 40rem);
+            grid-template-rows: 40rem 40rem 5rem;
         }
 
         &__4 {
             grid-column: 1 / 2;
             grid-row: 2 / 3;
+        }
+
+        &__link {
+            grid-column: 1 / 4;
         }
     }
 }
@@ -138,7 +142,8 @@
     .news {
         &__boxes {
             grid-template-columns: repeat(2, minmax(28rem, 1fr));
-            grid-template-rows: repeat(4, 30rem);
+            // grid-template-rows: repeat(4, 30rem);
+            grid-template-rows: 30rem 30rem 30rem 10rem;
         }
 
         &__1 {
@@ -208,6 +213,10 @@
             grid-column: 1 / 2;
             grid-row: 4 / 5;
         }
+
+        &__link {
+            grid-column: 2 / 3;
+        }
     }
 }
 
@@ -219,16 +228,12 @@
 
         &__boxes {
             grid-template-columns: 1fr;
-            grid-template-rows: repeat(8, 25rem);
+            grid-template-rows: 25rem 25rem 25rem 25rem 25rem 24rem 8rem 5rem;
         }
 
         &__1 {
             grid-column: 1 / 2;
             grid-row: 1 / 2;
-
-            h3 {
-                margin: 0;
-            }
         }
 
         &__2 {
@@ -256,7 +261,12 @@
             grid-row: 6 / 7;
             padding: 1rem;
 
-            p {
+            &__title {
+                margin: 0;
+                padding: 0;
+            }
+
+            &__text {
                 margin-top: .5rem;
                 margin-bottom: .5rem;
             }
@@ -270,6 +280,30 @@
     
             &__button {
                 margin-top: .5rem;
+            }
+        }
+
+        &__social {
+            grid-column: 1 / 2;
+            grid-row: 7 / 8;
+        }
+
+        &__link {
+            grid-column: 1 / 2;
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    .news {
+        &__boxes {
+            grid-template-rows: 25rem 25rem 25rem 25rem 25rem 23rem 8rem 5rem;
+        }
+
+        &__subscribe {
+            &__button {
+                width: 100%;
+                padding: 1rem 3rem;
             }
         }
     }
