--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,8 @@
 @import "layout/about-chef";
 @import "layout/about";
 @import "layout/contact";
+@import "layout/footer";
+@import "layout/gallery";
 @import "layout/header";
 @import "layout/hero";
 @import "layout/navigation";
